--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.3",
+    "react-confirm": "^0.3.0-7",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-native-dialog": "^9.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
